--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,5 @@
 # Birds CUB dataset
-birds_dataset_path: '/content/drive/My Drive/Colab Notebooks/text-to-image-using-GAN-master/datasets/ee285f-public/caltech_ucsd_birds/birds.hdf5'
-
+birds_dataset_path: 'D:\_Users\Pietruszynski\Text2Image\datasets\ee285f-public\caltech_ucsd_birds\birds.hdf5'
 
 # flowers dataset
-flowers_dataset_path: '/content/drive/My Drive/Colab Notebooks/text-to-image-using-GAN-master/datasets/ee285f-public/oxford_flowers/flowers.hdf5'
+flowers_dataset_path: 'D:\_Users\Pietruszynski\Text2Image\datasets\ee285f-public\oxford_flowers\flowers.hdf5'
